manifests/frontend/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bookstore-frontend
  name: bookstore-frontend
  namespace: frontend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: bookstore-frontend
    spec:
      containers:
      - image: ghcr.io/santosh1176/bookstore:latest
        name: bookstore
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        resources: {}
status: {}
